--- a/frontend/conuwalks/package.json
+++ b/frontend/conuwalks/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-segmented-control/segmented-control": "^2.5.7",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
@@ -21,6 +22,7 @@
     "expo": "~54.0.31",
     "expo-blur": "~15.0.8",
     "expo-build-properties": "~1.0.10",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
