--- a/frontend/conuwalks/package.json
+++ b/frontend/conuwalks/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.3",
+    "@openspacelabs/react-native-zoomable-view": "^2.4.2",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-segmented-control/segmented-control": "^2.5.7",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -45,7 +46,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
