fix some rendering; metro icons changed to generated svg to stop glitching, change popup not opening when tapping label, fix maestro tests for new app build requirements
add maestro tests and mock data for events
fix unit tests by unmocking global jest setup
remove extra files
sonar fix
revert of 6a835fd2 and fix of conflicts to add back removed features

fix test

--- a/frontend/conuwalks/.maestro/flows/feature-building-details.yaml
+++ b/frontend/conuwalks/.maestro/flows/feature-building-details.yaml
@@ -1,25 +1,29 @@
-appId: ${APP_ID}
+appId: com.conuwalks.app
 tags:
   - critical
   - feature
 ---
-- runFlow: ../subflows/setup.yaml
+- runFlow: 
+    file: ../subflows/launch.yaml
+    env:
+        USERNAME: "${USERNAME}"
+        PASSWORD: "${PASSWORD}"
+
+- doubleTapOn:
+    point: 50%, 50%
+
+- waitForAnimationToEnd
 
 - tapOn: "Sir George Williams"
 - tapOn:
     point: 45%, 63%
 - assertVisible: "John Molson Building.*"
-- swipe:  # drag pop-up up
-    start: 50%, 70%
-    end: 50%, 30%
-
+- runFlow: ../subflows/expand-info-popup.yaml
 - assertVisible: "Schedule"
 - assertVisible: "Opening Hours"
 - assertVisible: "Address"
 - assertVisible: "1450 Guy.*"
 - assertVisible: "Description"
 - assertVisible: "The JMSB building is a business.*"
-
-- tapOn:
-    point: 50%, 50%
-- assertNotVisible: "John Molson"
+- runFlow: ../subflows/close-info-popup.yaml
+- assertNotVisible: "John Molson Building.*"
