fix some rendering; metro icons changed to generaated svg to stop glitching, fix popup not closing when clicking outside it, change popup not opening when tapping label, fix maestro tests for new app build requirements

--- a/frontend/conuwalks/.maestro/flows/feature-building-details.yaml
+++ b/frontend/conuwalks/.maestro/flows/feature-building-details.yaml
@@ -1,9 +1,14 @@
-appId: ${APP_ID}
+appId: com.conuwalks.app
 tags:
   - critical
   - feature
 ---
 - runFlow: ../subflows/setup.yaml
+
+- tapOn:
+    point: 50%, 50%
+
+- waitForAnimationToEnd
 
 - tapOn: "Sir George Williams"
 - tapOn:
@@ -22,4 +27,9 @@ tags:
 
 - tapOn:
     point: 50%, 50%
-- assertNotVisible: "John Molson"
+- swipe:  # drag pop-up down
+    start: 50%, 40%
+    end: 50%, 100%
+    duration: 100
+
+- assertNotVisible: "John Molson Building.*"
