--- a/frontend/conuwalks/package.json
+++ b/frontend/conuwalks/package.json
@@ -47,12 +47,13 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-launch-arguments": "^4.1.1",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
@@ -60,7 +61,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react": "^16.3.2",
     "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
@@ -68,7 +69,7 @@
     "jest": "29.7.0",
     "jest-expo": "^54.0.17",
     "react-native-svg-transformer": "^1.5.3",
-    "react-test-renderer": "19.1.0",
+    "react-test-renderer": "^19.1.0",
     "typescript": "~5.9.2"
   },
   "private": true
