--- a/frontend/conuwalks/.maestro/flows/feature-building-details.yaml
+++ b/frontend/conuwalks/.maestro/flows/feature-building-details.yaml
@@ -3,9 +3,13 @@ tags:
   - critical
   - feature
 ---
-- runFlow: ../subflows/setup.yaml
+- runFlow: 
+    file: ../subflows/launch.yaml
+    env:
+        USERNAME: "${USERNAME}"
+        PASSWORD: "${PASSWORD}"
 
-- tapOn:
+- doubleTapOn:
     point: 50%, 50%
 
 - waitForAnimationToEnd
@@ -14,22 +18,12 @@ tags:
 - tapOn:
     point: 45%, 63%
 - assertVisible: "John Molson Building.*"
-- swipe:  # drag pop-up up
-    start: 50%, 70%
-    end: 50%, 30%
-
+- runFlow: ../subflows/expand-info-popup.yaml
 - assertVisible: "Schedule"
 - assertVisible: "Opening Hours"
 - assertVisible: "Address"
 - assertVisible: "1450 Guy.*"
 - assertVisible: "Description"
 - assertVisible: "The JMSB building is a business.*"
-
-- tapOn:
-    point: 50%, 50%
-- swipe:  # drag pop-up down
-    start: 50%, 40%
-    end: 50%, 100%
-    duration: 100
-
+- runFlow: ../subflows/close-info-popup.yaml
 - assertNotVisible: "John Molson Building.*"
