--- a/frontend/conuwalks/.maestro/flows/smoke-launch.yaml
+++ b/frontend/conuwalks/.maestro/flows/smoke-launch.yaml
@@ -2,7 +2,10 @@ appId: com.conuwalks.app
 tags:
   - smoke
 ---
-- runFlow: ../subflows/setup.yaml
-
+- runFlow: 
+    file: ../subflows/launch.yaml
+    env:
+        USERNAME: "${USERNAME}"
+        PASSWORD: "${PASSWORD}"
 - assertVisible: "Sir George Williams"
 - assertVisible: "Loyola"
