--- a/frontend/conuwalks/package.json
+++ b/frontend/conuwalks/package.json
@@ -15,22 +15,16 @@
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.3",
     "@openspacelabs/react-native-zoomable-view": "^2.4.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
-    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-native-segmented-control/segmented-control": "^2.5.7",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.31",
-    "expo-application": "~7.0.8",
-    "expo-auth-session": "~7.0.10",
     "expo-blur": "~15.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
-    "expo-crypto": "~15.0.8",
-    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
@@ -60,7 +54,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react": "^16.3.2",
     "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
@@ -68,7 +62,7 @@
     "jest": "29.7.0",
     "jest-expo": "^54.0.17",
     "react-native-svg-transformer": "^1.5.3",
-    "react-test-renderer": "19.1.0",
+    "react-test-renderer": "^19.1.0",
     "typescript": "~5.9.2"
   },
   "private": true
