--- a/frontend/conuwalks/package.json
+++ b/frontend/conuwalks/package.json
@@ -15,7 +15,9 @@
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.3",
     "@openspacelabs/react-native-zoomable-view": "^2.4.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-native-segmented-control/segmented-control": "^2.5.7",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
