--- a/frontend/conuwalks/package.json
+++ b/frontend/conuwalks/package.json
@@ -54,6 +54,7 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react": "^16.3.2",
     "@testing-library/react-native": "^13.3.3",
